fix(layout): footer dark mode

--- a/typescript-version/full-version/src/styles/master/_default_layout_w_horizontal_nav.scss
+++ b/typescript-version/full-version/src/styles/master/_default_layout_w_horizontal_nav.scss
@@ -17,7 +17,7 @@
   // 👉 App footer
   .layout-footer {
     padding: 1.2rem 0;
-    background: white;
+    background-color: rgb(var(--v-theme-surface));
     box-shadow: 0 2px 10px 0 rgb(94 86 105 / 10%);
   }
 }
