--- a/typescript-version/full-version/src/styles/master/_default_layout_w_vertical_nav.scss
+++ b/typescript-version/full-version/src/styles/master/_default_layout_w_vertical_nav.scss
@@ -2,8 +2,9 @@
 
 %nav-styles {
   backdrop-filter: blur(8px);
-  background-color: rgba(var(--v-theme-surface), 0.9);
-  box-shadow: 0 4px 8px -4px rgba(94, 86, 105, 42%);
+  /* stylelint-disable-next-line color-function-notation */
+  background-color: rgb(var(--v-theme-surface), 0.9);
+  box-shadow: 0 4px 8px -4px rgb(94 86 105 / 42%);
 }
 
 .layout-wrapper.layout-nav-type-vertical {
@@ -106,7 +107,7 @@
   // 👉 Layout footer
   .layout-footer {
     padding: 1.2rem 0;
-    background: white;
+    background-color: rgb(var(--v-theme-surface));
     box-shadow: 0 2px 10px 0 rgb(94 86 105 / 10%);
   }
 }
